tests/baselines/reference/internalAliasVarInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasVarInsideLocalModuleWithoutExportAccessError.ts(10,18): error TS2339: Property 'b' does not exist on type 'typeof c'.


==== internalAliasVarInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export namespace a {
        export var x = 10;
    }
    
    export namespace c {
        import b = a.x;
        export var bVal = b;
    }
    
    export var z = c.b;
                     ~
!!! error TS2339: Property 'b' does not exist on type 'typeof c'.